--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name = Map-Metro-Plugin-Map-Amsterdam
 author = Erik Carlsson <info@code301.com>
 license = Perl_5
-copyright_holder = Erik Carlsson <info@code301.com>
+copyright_holder = Erik Carlsson
 
 [Git::GatherDir]
 exclude_filename = Build.PL
@@ -18,13 +18,15 @@ copy = Build.PL
 prompt = 1
 
 [OurPkgVersion]
+die_on_existing_version = 1
+die_on_line_insertion = 1
 
 [NextRelease]
 format = %v  %{yyyy-MM-dd HH:mm:ss VVV}d
 
 [PreviousVersion::Changelog]
 [NextVersion::Semantic]
-major =
+major = 
 minor = API Changes, New Features, Enhancements
 revision = Revision, Bug Fixes, Documentation, Meta
 format = %d.%02d%02d
@@ -64,6 +66,8 @@ directory = examples
 [MetaYAML]
 
 [License]
+
+[ReadmeFromPod]
 
 [ExtraTests]
 
