--- a/weaver.ini
+++ b/weaver.ini
@@ -1,7 +1,6 @@
-; This file was auto-generated from iller.yaml on 2016-01-22 18:14:45 UTC.
-; Used configs:
-; * Dist::Iller::Config::Author::CSSON: 0.0105
-; * Dist::Iller::Config::Author::CSSON::MapMetro: 0.0105
+; This file was auto-generated from iller.yaml by Dist::Iller on 2019-11-30 22:12:11 UTC.
+; The following configs were used:
+; * Dist::Iller::Config::Author::CSSON: 0.0323
 
 [@CorePrep]
 
@@ -10,8 +9,11 @@
 [Name]
 
 [Badges]
+-kwalitee_author = CSSON
 badge = perl
 badge = travis
+badge = kwalitee
+badge = cpantesters
 badge = coverage
 formats = html, markdown
 
@@ -39,11 +41,11 @@ command = func
 
 [Region / postlude]
 
-[Source::DefaultGitHub]
-text = L<%s>
+[GenerateSection / SOURCE]
+text = L<{{$repository_web}}>
 
-[Homepage::DefaultCPAN]
-text = L<%s>
+[GenerateSection / HOMEPAGE]
+text = L<{{$homepage}}>
 
 [Authors]
 
